2006-09-19  Brian Warner  <warner@lothar.com>

	* buildbot/steps/python.py (PyFlakes): refactor, add summary logs
	* buildbot/test/test_steps.py (Python.testPyFlakes): add a test
	for at least the output-parsing parts of PyFlakes

2006-09-18  Brian Warner  <warner@lothar.com>

	* buildbot/steps/python.py: oops, fix import of StringIO

2006-09-17  Brian Warner  <warner@lothar.com>

	* buildbot/test/test_vc.py (VCBase._do_vctest_update_retry_1): it
	turns out that SVN-1.4.0 doesn't fail to update once you've
	replaced a file with a directory, unlike older versions of SVN and
	pretty much every other VC tool we support. Since what we really
	care about is that the update succeeds anyway, stop checking that
	the tree got clobbered and just assert that the build succeeded.
	(VCBase.printLogs): add a utility function for debugging

	* buildbot/process/step.py: oops, added extra imports by mistake

	* buildbot/changes/p4poller.py (P4Source._process_describe): do an
	rstrip() on the first line coming out of the 'p4 describe'
	process, to remove the stray ^M that Wade Brainerd reports seeing
	in the 'when' field. Fixes SF#1555985.

	* buildbot/master.py (BuildMaster.loadConfig): improve the error
	message logged when c['schedulers'] is not right
	* buildbot/scheduler.py (Scheduler.__init__): improve error
	message when a Scheduler() is created with the wrong arguments
	* buildbot/test/test_config.py (ConfigTest.testSchedulerErrors):
	verify that these error messages are emitted

	* buildbot/process/buildstep.py: rename step.py to buildstep.py .
	The idea is that all the base classes (like BuildStep and
	RemoteCommand and LogObserver) live in b.p.buildstep, and b.p.step
	will be a leftover backwards-compatibility file that only contains
	aliases for the steps that were moved out to buildbot.steps.*
	* lots: change imports to match
	* buildbot/process/step.py: add a DeprecationWarning if it ever
	gets imported

2006-09-12  Brian Warner  <warner@lothar.com>
